# Copyright 2019 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# The ANGLE build requires this file to point to the location of third-party
# dependencies.

angle_root = "//third_party/angle"

angle_googletest_dir = "//third_party/googletest/src"
angle_libpng_dir = "//third_party/libpng"
# Note: This path doesn't actually exist; see
# //build/secondary/third_party/jsoncpp/BUILD.gn
angle_jsoncpp_dir = "//third_party/jsoncpp"
